--- a/local-app-module/src/main/resources/web/index.html
+++ b/local-app-module/src/main/resources/web/index.html
@@ -4,6 +4,7 @@
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
   <title>Test Dev Proxy</title>
+  <link rel="icon" type="image/png" href="icon.png" />
   <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="css/jqueryFileTree.css">
   <link rel="stylesheet" href="css/style.css">
