--- a/local-app-module/src/main/resources/web/index.html
+++ b/local-app-module/src/main/resources/web/index.html
@@ -76,7 +76,7 @@
   </script>
 
   <script type="text/html" id="action-template">
-    <div>
+    <div class="form-group">
       <button data-bind="text:label, proxy-action"  class="btn btn-default"></button>
     </div>
   </script>
